--- a/memory-game-project-udacity/index.html
+++ b/memory-game-project-udacity/index.html
@@ -39,14 +39,11 @@
     <!--Modal-->
     <div class="modal">
         <!-- Modal content -->
-            <div class="modal-content">
-                  <span class="close">&times;</span>
-                  <p><strong>Congratulations!</strong></p>
+                  <p><strong>Congratulations!You Won!!</strong></p>
                   <p>Time to complete: <span class="finalTime"></span></p>
                   <p>Number of moves: <span class="finalMoves"></span></p>
                   <p>Star rating: <span class="finalRating"></span></p>
                   <button class="button" onclick="playAgain()">Play again?</button>
-             </div>
    </div>
  </div>
  
